@@ -4,47 +4,18 @@ import org.springframework.stereotype.Service;
 import uk.gov.pmrv.api.account.domain.enumeration.AccountStatus;
 import uk.gov.pmrv.api.account.installation.domain.enumeration.InstallationAccountStatus;
 import uk.gov.pmrv.api.workflow.request.core.domain.enumeration.RequestCreateActionType;
-import uk.gov.pmrv.api.workflow.request.core.domain.enumeration.RequestStatus;
 import uk.gov.pmrv.api.workflow.request.core.domain.enumeration.RequestType;
-import uk.gov.pmrv.api.workflow.request.flow.common.domain.dto.RequestCreateAccountStatusValidationResult;
-import uk.gov.pmrv.api.workflow.request.flow.common.domain.dto.RequestCreateRequestTypeValidationResult;
-import uk.gov.pmrv.api.workflow.request.flow.common.domain.dto.RequestCreateValidationResult;
 import uk.gov.pmrv.api.workflow.request.flow.common.service.RequestCreateAccountRelatedValidator;
 import uk.gov.pmrv.api.workflow.request.flow.common.service.RequestCreateValidatorService;
 
+import java.util.Collections;
 import java.util.Set;
 
 @Service
 public class WithholdingOfAllowancesCreateValidator extends RequestCreateAccountRelatedValidator {
 
-    private final RequestCreateValidatorService requestCreateValidatorService;
-
     public WithholdingOfAllowancesCreateValidator(final RequestCreateValidatorService requestCreateValidatorService) {
         super(requestCreateValidatorService);
-        this.requestCreateValidatorService = requestCreateValidatorService;
-    }
-
-    @Override
-    public RequestCreateValidationResult validateAction(Long accountId) {
-        RequestCreateValidationResult validationResult = RequestCreateValidationResult.builder().valid(true).build();
-
-        RequestCreateAccountStatusValidationResult accountStatusResult =
-                requestCreateValidatorService.validateAccountStatuses(accountId, this.getApplicableAccountStatuses());
-        if (!accountStatusResult.isValid()) {
-            validationResult.setValid(false);
-            validationResult.setApplicableAccountStatuses(this.getApplicableAccountStatuses());
-            validationResult.setReportedAccountStatus(accountStatusResult.getReportedAccountStatus());
-        }
-
-        RequestCreateRequestTypeValidationResult conflictingRequestsResult =
-                requestCreateValidatorService.validateInProgressAndCompletedConflictingRequestTypes(
-                        accountId, this.getMutuallyExclusiveRequests(),getMutuallyExclusiveRequestStatuses());
-        if (!conflictingRequestsResult.isValid()) {
-            validationResult.setValid(false);
-            validationResult.setReportedRequestTypes(conflictingRequestsResult.getReportedRequestTypes());
-        }
-
-        return validationResult;
     }
 
     @Override
@@ -61,11 +32,7 @@ public class WithholdingOfAllowancesCreateValidator extends RequestCreateAccount
 
     @Override
     public Set<RequestType> getMutuallyExclusiveRequests() {
-        return Set.of(RequestType.WITHHOLDING_OF_ALLOWANCES);
-    }
-
-    public Set<RequestStatus> getMutuallyExclusiveRequestStatuses() {
-        return Set.of(RequestStatus.IN_PROGRESS, RequestStatus.COMPLETED);
+        return Collections.emptySet();
     }
 
 }
